--- a/generos.html
+++ b/generos.html
@@ -5,10 +5,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>OtakuCueva</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link href="css/animaciones.css" rel="stylesheet">
-<link href="css/template.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link  href="/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link href="/css/animaciones.css" rel="stylesheet">
+<link href="/css/template.css" rel="stylesheet">
+<link href="/css/responsiveBuscador.css" rel="stylesheet">
+<link href="/css/responsiveGeneros.css" rel="stylesheet">
 
 </head>
 <body>
@@ -23,13 +25,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="search.html">Buscador</a>
+          <a class="nav-link" href="#">Buscador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="generos.html">Generos</a>
+          <a class="nav-link" href="#">Generos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -39,21 +41,17 @@
   </nav>
 </header>
 
+  <div class="Generos"> 
+ <label class="text-center">Generos</label>
+ <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+    <option selected>options</option>
+    <option value="1">One</option>
+    <option value="2" >Two</option>
+    <option value="3">Three</option>
+  </select>
+</div>
 
 
-<div class="container info">
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Otaku cueva</h1>
-      <p class="lead text-muted">En este lugar podras buscar los anime que te gustan o filtrar por generos,nuestra base de datos esta relacionada a AnimeList,en 
-        el boton +info te llevara a ver la informacion completa en su pagina.
-      </p>
-      <p>
-        <a href="search.html" class="btn btn-info text-light">Buscador</a>
-        <a href="generos.html" class="btn btn-danger">Generos</a>
-      </p>
-    </div>
-  </section>
 
   <template id="template" class="bg-dark">
     <div class="cardTemplate bg-dark">
@@ -63,25 +61,36 @@
     <label>ranking: <span id="ranking" class="text-info"></span></label>
     <label>clasificacion: <span id="calificacion" class="text-info"></span></label>
     <label>Fecha: <span id="date" class="text-info"></span></label>
+    <label>Synposis: <span id="synopsis" class="text-info"></span></label>
     <label><a id="urlLink" href=""><button class="btn btn-info text-light">Info</button></a></label>
     </div>
     </div>
     </template>
 
-  <div class="home" id="home">
-    <h1 class="text-center">Top Anime</h1>
-  </div>
-</div>
 
-<footer class="bg-dark text-light">
-<a href="#">Inicio</a>
-<p>©Otaku-Cueva no tiene derecho de autor de ningun anime!</p>
-<p>Para mas informacion visite la pagina oficcial animeList<a href="../../">Visite su pagina</a>,Este lugar funciona gracias a la API <a href="../../getting-started/">Jikans</a>.</p>
-</footer>
+  <div class="container">
+    <h1 class="text-center" id="titulo"></h1>
+    <div class="home" id="home">
+      </div>
+      <nav aria-label="...">
+        <ul class="pagination pagination-lg">
+          <li class="page-item">
+            <button class="page-link" id="pagePrev">prev</button>
+          </li>
+          <li class="page-item"><button class="page-link" id="pageNext">next></button>
+        </ul>
+      </nav>
+  </div>
+  
+ 
+
+
+
 
 <script src="jquery-3.5.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/home.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="js/generos.js"></script>
 </body>
 </html>
