--- a/search.html
+++ b/search.html
@@ -5,10 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>OtakuCueva</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link href="css/animaciones.css" rel="stylesheet">
-<link href="css/template.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link  href="/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link href="/css/animaciones.css" rel="stylesheet">
+<link href="/css/template.css" rel="stylesheet">
+<link href="/css/responsiveBuscador.css" rel="stylesheet">
 
 </head>
 <body>
@@ -23,10 +24,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="search.html">Buscador</a>
+          <a class="nav-link" href="#">Buscador</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="generos.html">Generos</a>
@@ -39,21 +40,14 @@
   </nav>
 </header>
 
+  <div class="Search"> 
+    <form class="form-inline my-2 my-lg-0 d-flex justify-content-center">
+      <input class="form-control mr-sm-2" type="search" autocomplete="off" placeholder="Search.." aria-label="Search" id="searchAnime" required>
+      <button class="btn btn-dark my-2 my-sm-0" type="button"  id="botonBuscar"><i class="fas fa-search"></i></button>
+      </form>
+</div>
 
 
-<div class="container info">
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Otaku cueva</h1>
-      <p class="lead text-muted">En este lugar podras buscar los anime que te gustan o filtrar por generos,nuestra base de datos esta relacionada a AnimeList,en 
-        el boton +info te llevara a ver la informacion completa en su pagina.
-      </p>
-      <p>
-        <a href="search.html" class="btn btn-info text-light">Buscador</a>
-        <a href="generos.html" class="btn btn-danger">Generos</a>
-      </p>
-    </div>
-  </section>
 
   <template id="template" class="bg-dark">
     <div class="cardTemplate bg-dark">
@@ -63,14 +57,20 @@
     <label>ranking: <span id="ranking" class="text-info"></span></label>
     <label>clasificacion: <span id="calificacion" class="text-info"></span></label>
     <label>Fecha: <span id="date" class="text-info"></span></label>
+    <label>Synposis: <span id="synopsis" class="text-info"></span></label>
     <label><a id="urlLink" href=""><button class="btn btn-info text-light">Info</button></a></label>
     </div>
     </div>
     </template>
 
-  <div class="home" id="home">
-    <h1 class="text-center">Top Anime</h1>
+
+  <div class="container">
+    <h1 class="text-center" id="titulo"></h1>
+    <div class="home" id="home">
+      </div>
   </div>
+  
+  
 </div>
 
 <footer class="bg-dark text-light">
@@ -82,6 +82,8 @@
 <script src="jquery-3.5.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/home.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="js/remove.js"></script>
+<script src="js/list.js"></script>
 </body>
 </html>
