--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Otaku cueva</h1>
-      <p class="lead text-muted">En este lugar podras buscar los anime que te gustan o filtrar por generos,nuestra base de datos esta relacionada a AnimeList,en 
-        el boton +info te llevara a ver la informacion completa en su pagina.
+      <p class="lead text-muted">En este lugar podras buscar los anime que te gustan y encontrar informacion sobre el o ver los distintos generos de anime y encontrar el que mas te guste para ver ,JikansApi esta relacionada a AnimeList,en 
+        el boton info te llevara a ver la informacion completa en su pagina,esta web-app es creada por facundo loto.
       </p>
       <p>
         <a href="search.html" class="btn btn-info text-light">Buscador</a>
