--- a/search.html
+++ b/search.html
@@ -68,16 +68,13 @@
     <h1 class="text-center" id="titulo"></h1>
     <div class="home" id="home">
       </div>
+   
   </div>
   
-  
-</div>
+ 
 
-<footer class="bg-dark text-light">
-<a href="#">Inicio</a>
-<p>©Otaku-Cueva no tiene derecho de autor de ningun anime!</p>
-<p>Para mas informacion visite la pagina oficcial animeList<a href="../../">Visite su pagina</a>,Este lugar funciona gracias a la API <a href="../../getting-started/">Jikans</a>.</p>
-</footer>
+
+
 
 <script src="jquery-3.5.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -85,5 +82,12 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="js/remove.js"></script>
 <script src="js/list.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script> <!--libreria menu lateral-->
+<script type="text/javascript"> //sirve para el menu
+const pushbar = new Pushbar({
+blur:true,
+overlay:true,
+});
+</script>
 </body>
 </html>
