--- a/generos.html
+++ b/generos.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>OtakuCueva</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
 <link  href="/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <link href="/css/animaciones.css" rel="stylesheet">
@@ -28,30 +29,74 @@
           <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Buscador</a>
+          <a class="nav-link" href="search.html">Buscador</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Generos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">about</a>
         </li>
+    
       </ul>
     </div>
   </nav>
+ 
 </header>
 
-  <div class="Generos"> 
- <label class="text-center">Generos</label>
- <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-    <option selected>options</option>
-    <option value="1">One</option>
-    <option value="2" >Two</option>
-    <option value="3">Three</option>
-  </select>
-</div>
+<div class=" menu push bg-dark"data-pushbar-id="mypushbar1" data-pushbar-direction="left">
 
-
+  <!-- Example single danger button -->
+  <div class="menus">
+  <ul class="" >
+  <h4 class="text-light text-left">Generos</h4> <!--ver push.js y modificar diseño de card-->
+  <li class="">
+  <button  type="button" data-pushbar-close class="btn btn-dark"  id="shounen">Shounen</button>
+  </li>
+  <li class="">
+  <button type="button" data-pushbar-close class="btn btn-dark"  id="school">School</button>
+  </li>
+  <li class="">
+  <button type="button"  data-pushbar-close class="btn btn-dark"  id="romance">Romance</button>
+  </li>
+  <li class="">
+  <button type="button" data-pushbar-close class="btn btn-dark"  id="policial">Policial</button>
+  </li>
+  <li class="">
+  <button type="button"  data-pushbar-close class="btn btn-dark"   id="drama">Drama</button>
+  </li>
+  <li class="">
+  <button type="button"  data-pushbar-close class="btn btn-dark"  id="sport">Sport</button>
+  </li>
+  <li class="">
+    <h5 class="text-light text-left">+18</h5>
+    <ul class="" >
+      <li class="">
+      <button  type="button" data-pushbar-close class="btn btn-dark"  id="horror">Horror</button>
+      </li>
+      <li class="">
+      <button type="button" data-pushbar-close class="btn btn-dark"  id="seinen">Seinen</button>
+      </li>
+      <li class="">
+      <button type="button"  data-pushbar-close class="btn btn-dark"  id="hentai">Hentai</button>
+      </li>
+      <li class="">
+      <button type="button" data-pushbar-close class="btn btn-dark"  id="yuri">Yuri</button>
+      </li>
+      <li class="">
+      <button type="button"  data-pushbar-close class="btn btn-dark"   id="yaoi">Yoai</button>
+      </li>
+  </ul>
+  </div>
+  
+  
+  <button class="close text-light" data-pushbar-close>x</button>
+  </div>
+  <div class="filter bg-dark">
+  <button class="btn btn-dark" data-pushbar-target="mypushbar1" >
+    <i class="fas fa-align-left"></i>
+  </button></div>
+  
 
   <template id="template" class="bg-dark">
     <div class="cardTemplate bg-dark">
@@ -72,25 +117,48 @@
     <h1 class="text-center" id="titulo"></h1>
     <div class="home" id="home">
       </div>
-      <nav aria-label="...">
-        <ul class="pagination pagination-lg">
+      <nav class="nav-pagination"aria-label="Page navigation example">
+        <ul class="pagination">
           <li class="page-item">
-            <button class="page-link" id="pagePrev">prev</button>
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true" id="pagePrev">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
           </li>
-          <li class="page-item"><button class="page-link" id="pageNext">next></button>
+          <li class="page-item"><a class="page-link" href="#" id="pagina"></a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true" id="pageNext">&raquo;</span>
+              <span class="sr-only" >Next</span>
+            </a>
+          </li>
         </ul>
       </nav>
+     
   </div>
   
  
 
 
 
-
+  <footer class="bg-dark text-light">
+    <a href="#">Inicio</a>
+    <p>©Otaku-Cueva no tiene derecho de autor de ningun anime!</p>
+    <p>Para mas informacion visite la pagina oficcial animeList<a href="../../">Visite su pagina</a>,Este lugar funciona gracias a la API <a href="../../getting-started/">Jikans</a>.</p>
+    </footer>
 <script src="jquery-3.5.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="js/generos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script> <!--libreria menu lateral-->
+<script type="text/javascript"> //sirve para el menu
+const pushbar = new Pushbar({
+blur:true,
+overlay:true,
+});
+</script>
+
+
 </body>
 </html>
