detalles casi terminados

--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
 <!-- Required meta tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>OtakuCueva</title>
+<title>AnimeCueva</title>
 <link  href="/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <link href="/css/animaciones.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <header class="fixed-top"> 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">OtakuCueva</a>
+    <a class="navbar-brand" href="#">AnimeCueva</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="opcion" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,6 +41,7 @@
 </header>
 
   <div class="Search"> 
+    <h5 class="text-center">Buscar</h5>
     <form class="form-inline my-2 my-lg-0 d-flex justify-content-center">
       <input class="form-control mr-sm-2" type="search" autocomplete="off" placeholder="Search.." aria-label="Search" id="searchAnime" required>
       <button class="btn btn-dark my-2 my-sm-0" type="button"  id="botonBuscar"><i class="fas fa-search"></i></button>
@@ -68,7 +69,9 @@
     <h1 class="text-center" id="titulo"></h1>
     <div class="home" id="home">
       </div>
-   
+      <div class="loader">
+        <img src="./img/loader.gif" id="load">
+        </div>
   </div>
   
  
