--- a/generos.html
+++ b/generos.html
@@ -4,14 +4,14 @@
 <!-- Required meta tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>OtakuCueva</title>
+<title>AnimeCueva</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
-<link   rel="stylesheet" href="/css/bootstrap.min.css">
+<link  rel="stylesheet" href="./css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-<link href="/css/animaciones.css" rel="stylesheet">
-<link href="/css/template.css" rel="stylesheet">
-<link href="/css/responsiveBuscador.css" rel="stylesheet">
-<link href="/css/responsiveGeneros.css" rel="stylesheet">
+<link  rel="stylesheet" href="./css/animaciones.css">
+<link  rel="stylesheet" href="./css/template.css">
+<link rel="stylesheet" href="./css/responsiveBuscador.css" >
+<link  rel="stylesheet" href="./css/responsiveGeneros.css">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
 
   <header class="fixed-top"> 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">OtakuCueva</a>
+    <a class="navbar-brand" href="#">AnimeCueva</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="opcion" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -117,7 +117,10 @@
     <h1 class="text-center" id="titulo"></h1>
     <div class="home" id="home">
       </div>
-      <nav class="nav-pagination"aria-label="Page navigation example">
+      <div class="loader">
+        <img src="./img/loader.gif" id="load">
+        </div>
+      <nav class="nav-pagination"aria-label="Page navigation example" id="navPage">
         <ul class="pagination">
           <li class="page-item">
             <a class="page-link" href="#" aria-label="Previous">
@@ -141,9 +144,9 @@
 
 
 
-  <footer class="bg-dark text-light">
+  <footer class="bg-dark text-light" id="footer">
     <a href="#">Inicio</a>
-    <p>©Otaku-Cueva no tiene derecho de autor de ningun anime!</p>
+    <p>©AnimeCueva no tiene derecho de autor de ningun anime!</p>
     <p>Para mas informacion visite la pagina oficcial animeList<a href="../../">Visite su pagina</a>,Este lugar funciona gracias a la API <a href="../../getting-started/">Jikans</a>.</p>
     </footer>
 <script src="jquery-3.5.1.js"></script>
