--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <div class="container info">
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Otaku cueva</h1>
+      <h1>Anime Cueva</h1>
       <p class="lead text-muted">En este lugar podras buscar los anime que te gustan y encontrar informacion sobre el o ver los distintos generos de anime y encontrar el que mas te guste para ver ,JikansApi esta relacionada a AnimeList,en 
-        el boton info te llevara a ver la informacion completa en su pagina,esta web-app es creada por facundo loto.
+        el boton info te llevara a ver la informacion completa en su pagina,AnimeCueva esta creada por facundo loto.
       </p>
       <p>
         <a href="search.html" class="btn btn-info text-light">Buscador</a>
