--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>OtakuCueva</title>
-<link href="/css/bootstrap.min.css" rel="stylesheet" >
-<link href="/css/animaciones.css" rel="stylesheet">
-<link href="/css/template.css" rel="stylesheet">
-<link href="/css/responsive.css" rel="stylesheet">
+<link href="./css/bootstrap.min.css" rel="stylesheet" >
+<link href="./css/animaciones.css" rel="stylesheet">
+<link href="./css/template.css" rel="stylesheet">
+<link href="./css/responsive.css" rel="stylesheet">
 
 </head>
 <body>
