--- a/index.html
+++ b/index.html
@@ -1,87 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<!-- Required meta tags -->
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>OtakuCueva</title>
-<link href="./css/bootstrap.min.css" rel="stylesheet" >
-<link href="./css/animaciones.css" rel="stylesheet">
-<link href="./css/template.css" rel="stylesheet">
-<link href="./css/responsive.css" rel="stylesheet">
+  <!-- Required meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>OtakuCueva</title>
+  <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/animaciones.css" rel="stylesheet">
+  <link href="./css/template.css" rel="stylesheet">
+  <link href="./css/responsive.css" rel="stylesheet">
 
 </head>
+
 <body>
-
-
-  <header class="fixed-top"> 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">OtakuCueva</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="opcion" aria-label="Toggle navigation">
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">OtakuCueva</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="opcion" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="search.html">Buscador</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="generos.html">Generos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Buscador</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="generos.html">Generos</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
 
 
-<div class="container info">
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Anime Cueva</h1>
-      <p class="lead text-muted">En este lugar podras buscar los anime que te gustan y encontrar informacion sobre el o ver los distintos generos de anime y encontrar el que mas te guste para ver ,JikansApi esta relacionada a AnimeList,en 
-        el boton info te llevara a ver la informacion completa en su pagina,AnimeCueva esta creada por facundo loto.
-      </p>
-      <p>
-        <a href="search.html" class="btn btn-info text-light">Buscador</a>
-        <a href="generos.html" class="btn btn-danger">Generos</a>
-      </p>
-    </div>
-  </section>
+  <div class="container info">
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1>Anime Cueva</h1>
+        <p class="lead text-muted">En este lugar podras buscar los anime que te gustan y encontrar informacion sobre el
+          o ver los distintos generos de anime y encontrar el que mas te guste para ver ,JikansApi esta relacionada a
+          AnimeList,en
+          el boton info te llevara a ver la informacion completa en su pagina,AnimeCueva esta creada por facundo loto.
+        </p>
+        <p>
+          <a href="search.html" class="btn btn-info text-light">Buscador</a>
+          <a href="generos.html" class="btn btn-danger">Generos</a>
+        </p>
+      </div>
+    </section>
 
-  <template id="template" class="bg-dark">
-    <div class="cardTemplate bg-dark">
-    <h5 class="text-center text-info"id="title"></h5>
-    <img src="" id="img">
-    <div class="informacion">
-    <label>ranking: <span id="ranking" class="text-info"></span></label>
-    <label>clasificacion: <span id="calificacion" class="text-info"></span></label>
-    <label>Fecha: <span id="date" class="text-info"></span></label>
-    <label><a id="urlLink" href=""><button class="btn btn-info text-light">Info</button></a></label>
-    </div>
-    </div>
+    <template id="template" class="bg-dark">
+      <div class="cardTemplate bg-dark">
+        <h5 class="text-center text-info" id="title"></h5>
+        <img src="" id="img">
+        <div class="informacion">
+          <label>ranking: <span id="ranking" class="text-info"></span></label>
+          <label>clasificacion: <span id="calificacion" class="text-info"></span></label>
+          <label>Fecha: <span id="date" class="text-info"></span></label>
+          <label><a id="urlLink" href=""><button class="btn btn-info text-light">Info</button></a></label>
+        </div>
+      </div>
     </template>
+    <div>
+      <h1 class="text-center">Top Anime</h1>
+      <div class="home" id="home"></div>
+    </div>
 
-  <div class="home" id="home">
-    <h1 class="text-center">Top Anime</h1>
   </div>
-</div>
+  </div>
 
-<footer class="bg-dark text-light">
-<a href="#">Inicio</a>
-<p>©Otaku-Cueva no tiene derecho de autor de ningun anime!</p>
-<p>Para mas informacion visite la pagina oficcial animeList<a href="../../">Visite su pagina</a>,Este lugar funciona gracias a la API <a href="../../getting-started/">Jikans</a>.</p>
-</footer>
-
-<script src="jquery-3.5.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/home.js"></script>
+  <script src="jquery-3.5.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
+  </script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/home.js"></script>
 </body>
+
 </html>
