--- a/generos.html
+++ b/generos.html
@@ -1,131 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<!-- Required meta tags -->
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>AnimeCueva</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
-<link  rel="stylesheet" href="./css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-<link  rel="stylesheet" href="./css/animaciones.css">
-<link  rel="stylesheet" href="./css/template.css">
-<link rel="stylesheet" href="./css/responsiveBuscador.css" >
-<link  rel="stylesheet" href="./css/responsiveGeneros.css">
+  <!-- Required meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AnimeCueva</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/animaciones.css">
+  <link rel="stylesheet" href="./css/template.css">
+  <link rel="stylesheet" href="./css/responsiveBuscador.css">
+  <link rel="stylesheet" href="./css/responsiveGeneros.css">
 
 </head>
+
 <body>
 
 
-  <header class="fixed-top"> 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">AnimeCueva</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="opcion" aria-label="Toggle navigation">
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">AnimeCueva</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="opcion" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Buscador</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+  </header>
+
+  <div class=" menu push bg-dark" data-pushbar-id="mypushbar1" data-pushbar-direction="left">
+
+    <!-- Example single danger button -->
+    <div class="menus">
+      <ul class="">
+        <h4 class="text-light text-left">Generos</h4>
+        <!--ver push.js y modificar diseño de card-->
+        <li class="">
+          <button type="button" data-pushbar-close class="btn btn-dark" id="shounen">Shounen</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="search.html">Buscador</a>
+        <li class="">
+          <button type="button" data-pushbar-close class="btn btn-dark" id="school">School</button>
+        </li>
+        <li class="">
+          <button type="button" data-pushbar-close class="btn btn-dark" id="romance">Romance</button>
+        </li>
+        <li class="">
+          <button type="button" data-pushbar-close class="btn btn-dark" id="policial">Policial</button>
+        </li>
+        <li class="">
+          <button type="button" data-pushbar-close class="btn btn-dark" id="drama">Drama</button>
+        </li>
+        <li class="">
+          <button type="button" data-pushbar-close class="btn btn-dark" id="sport">Sport</button>
         </li>
       </ul>
     </div>
-  </nav>
- 
-</header>
 
-<div class=" menu push bg-dark"data-pushbar-id="mypushbar1" data-pushbar-direction="left">
 
-  <!-- Example single danger button -->
-  <div class="menus">
-  <ul class="" >
-  <h4 class="text-light text-left">Generos</h4> <!--ver push.js y modificar diseño de card-->
-  <li class="">
-  <button  type="button" data-pushbar-close class="btn btn-dark"  id="shounen">Shounen</button>
-  </li>
-  <li class="">
-  <button type="button" data-pushbar-close class="btn btn-dark"  id="school">School</button>
-  </li>
-  <li class="">
-  <button type="button"  data-pushbar-close class="btn btn-dark"  id="romance">Romance</button>
-  </li>
-  <li class="">
-  <button type="button" data-pushbar-close class="btn btn-dark"  id="policial">Policial</button>
-  </li>
-  <li class="">
-  <button type="button"  data-pushbar-close class="btn btn-dark"   id="drama">Drama</button>
-  </li>
-  <li class="">
-  <button type="button"  data-pushbar-close class="btn btn-dark"  id="sport">Sport</button>
-  </li>
-  </ul>
-  </div>
-  
-  
-  <button class="close text-light" data-pushbar-close>x</button>
+    <button class="close text-light" data-pushbar-close>x</button>
   </div>
   <div class="filter bg-dark">
-  <button class="btn btn-dark" data-pushbar-target="mypushbar1" >
-    <i class="fas fa-align-left"></i>
-  </button></div>
-  
+    <button class="btn btn-dark" data-pushbar-target="mypushbar1">
+      <i class="fas fa-align-left"></i>
+    </button></div>
+
 
   <template id="template" class="bg-dark">
     <div class="cardTemplate bg-dark">
-    <h5 class="text-center text-info"id="title"></h5>
-    <img src="" id="img">
-    <div class="informacion">
-    <label>ranking: <span id="ranking" class="text-info"></span></label>
-    <label>clasificacion: <span id="calificacion" class="text-info"></span></label>
-    <label>Fecha: <span id="date" class="text-info"></span></label>
-    <label>Synposis: <span id="synopsis" class="text-info"></span></label>
-    <label><a id="urlLink" href=""><button class="btn btn-info text-light">Info</button></a></label>
+      <h5 class="text-center text-info" id="title"></h5>
+      <img src="" id="img">
+      <div class="informacion">
+        <label>ranking: <span id="ranking" class="text-info"></span></label>
+        <label>clasificacion: <span id="calificacion" class="text-info"></span></label>
+        <label>Fecha: <span id="date" class="text-info"></span></label>
+        <label>Synposis: <span id="synopsis" class="text-info"></span></label>
+        <label><a id="urlLink" href=""><button class="btn btn-info text-light">Info</button></a></label>
+      </div>
     </div>
-    </div>
-    </template>
+  </template>
 
 
   <div class="container">
     <h1 class="text-center" id="titulo"></h1>
     <div class="home" id="home">
-      </div>
-      <div class="loader">
-        <img src="./img/loader.gif" id="load">
-        </div>
-      <nav class="nav-pagination"aria-label="Page navigation example" id="navPage">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true" id="pagePrev">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#" id="pagina"></a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true" id="pageNext">&raquo;</span>
-              <span class="sr-only" >Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-     
+    </div>
+    <div class="loader">
+      <img src="./img/loader.gif" id="load">
+    </div>
+    <nav class="nav-pagination" aria-label="Page navigation example" id="navPage">
+      <ul class="pagination">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true" id="pagePrev">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#" id="pagina"></a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true" id="pageNext">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
   </div>
-  
-<script src="jquery-3.5.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="js/generos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script> <!--libreria menu lateral-->
-<script type="text/javascript"> //sirve para el menu
-const pushbar = new Pushbar({
-blur:true,
-overlay:true,
-});
-</script>
+
+  <script src="jquery-3.5.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
+  </script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="js/generos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pushbar.js@1.0.0/src/pushbar.min.js"></script>
+  <!--libreria menu lateral-->
+  <script type="text/javascript">
+    //sirve para el menu
+    const pushbar = new Pushbar({
+      blur: true,
+      overlay: true,
+    });
+  </script>
 </body>
+
 </html>
